<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="@string/clear_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_clear_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="15dp"
        android:text="@string/clear_all"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/dialog_clear_all"
         />

    <TextView
        android:id="@+id/dialog_clear_but"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_but"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingBottom="7dp"
        android:paddingTop="15dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/dialog_clear_but"
        />
</android.support.constraint.ConstraintLayout>