<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointGenerator">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickListener"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/temperatureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tempField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/temp_input"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateButton" />

        <Button
            android:id="@+id/symptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickListener"
            android:text="@string/focus_symptoms"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/FlatButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempField" />

        <Button
            android:id="@+id/drugsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickListener"
            android:text="@string/focus_drugs"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/FlatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempField" />

        <ImageView
            android:id="@+id/noteButton"
            android:layout_width="36dp"
            android:layout_height="35dp"
            android:layout_marginTop="6dp"
            android:onClick="onClickListener"
            app:layout_constraintEnd_toStartOf="@+id/drugsButton"
            app:layout_constraintStart_toEndOf="@+id/symptButton"
            app:layout_constraintTop_toBottomOf="@+id/tempField"
            app:srcCompat="@drawable/ic_writing_on" />

        <TextView
            android:id="@+id/generatorWhenHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/generator_when_hint"
            app:layout_constraintBottom_toBottomOf="@+id/dateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="onClickListener"
            android:text="@string/generator_date_now"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/FlatButton"
            app:layout_constraintEnd_toStartOf="@+id/generatorTempHint"
            app:layout_constraintStart_toEndOf="@+id/generatorWhenHint"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/generatorTempHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/generator_descr_temp"
            app:layout_constraintBottom_toBottomOf="@+id/generatorWhenHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"  />

            <LinearLayout
                android:id="@+id/symptLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/drugLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>