<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits">

    <ScrollView
        android:id="@+id/creditScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="93dp"
                android:layout_height="101dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_for_icon" />

            <TextView
                android:id="@+id/creditsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:text="@string/credits_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pic" />

            <TextView
                android:id="@+id/verTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/credits_ver"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/creditsName" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/verNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/creditsName" />

            <TextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/credits_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verTxt" />

            <Button
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/credits_stars"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/FlatButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creditScrollLayout" />

            <Button
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="onClick"
                android:text="@string/credits_mail"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/FlatButton"
                app:layout_constraintBottom_toTopOf="@+id/creditScrollLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/by" />


            <LinearLayout
                android:id="@+id/creditScrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="268dp">

                <TextView
                    android:id="@+id/free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:paddingBottom="4dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/credits_free_icons"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:id="@+id/greeterBlanc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/greeterBlancImg"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_blank2" />

                    <TextView
                        android:id="@+id/greeterBlancFrom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingEnd="0dp"
                        android:paddingStart="8dp"
                        android:text="@string/credits_greeter_blanc"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/noteImg"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_writing" />

                    <ImageView
                        android:id="@+id/noteImgOn"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_writing_on" />

                    <TextView
                        android:id="@+id/noteFrom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingEnd="0dp"
                        android:paddingStart="8dp"
                        android:text="@string/credits_note_icon"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:id="@+id/drug"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/drugImg"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_medicine_grey" />

                    <ImageView
                        android:id="@+id/drugImgOn"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_medicine_blue" />

                    <TextView
                        android:id="@+id/drugFrom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingEnd="0dp"
                        android:paddingStart="8dp"
                        android:text="@string/credits_note_icon"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconImg"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_for_icon" />

                    <TextView
                        android:id="@+id/iconFrom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingEnd="0dp"
                        android:paddingStart="8dp"
                        android:text="@string/credits_note_icon"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/credits_license"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/licenseCommons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:linksClickable="true"
                    android:paddingBottom="8dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/credits_creative_commons"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/licenseFlaticon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:paddingBottom="8dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/credits_flaticon"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>